[project]
name = "pdf-semantic-keyword-analysis"
version = "1.0.0"
description = "High-performance PDF Semantic keyword analysis tool using AI for intelligent text extraction and matching"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pikepdf>=8.0.0",
    "pymupdf>=1.23.0",
    "pypdf>=4.0.0",
    "openai>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
